--- a/Coreopsis.html
+++ b/Coreopsis.html
@@ -36,14 +36,14 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
   Annual:
   <br>
-  start seeds indoors in March or direct sow after last frost.
+  Start seeds indoors in March or direct sow after last frost.
   <br><br>
-  Per-:
+  Perrenial:
   <br>
   Wood chip base in spring,
   <br>
@@ -51,13 +51,11 @@
 <br><br>
   Both plants:
   <br>
-  do not over fertilize- more blooms in poor soil.
+  do not over fertilize — more blooms in poor soil.
   <br>
-  General practice: harvest blooms often to promote more blooming.
+  General practice: Harvest blooms often to promote more blooming.
   <br>
-  Pick 40-50% of flowers and,
-  <br>
-  leave others as bee forage. </p>
+  Pick 40-50% of flowers but leave others as bee forage. </p>
 
 
         </div>
@@ -78,11 +76,11 @@
           <p class="textblock">
             June:
             <br>
-            flowers begin to bloom and can be harvested for natural dyes.
+            Flowers begin to bloom and can be harvested for natural dyes.
             <br><br>
             July, August, September, October:
             <br>
-            flowers can be harvested until October when plant can be harvested for dyes. </p>        </div>
+            Flowers can be harvested until October when plant can be harvested for dyes. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -95,7 +93,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> The flowers and leaves can be used to create a yellow/gold/orange or red  dye. </p>        </div>
+          <p class="textblock"> The flowers and leaves can be used to create a yellow/gold/orange or red dye. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -107,18 +105,18 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/coreopsis/" style="text-decoration:underline;"> Hyperlink to a dichotomous key that can be used to discover the species of coreopsis.</a></p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/coreopsis/" style="text-decoration:underline;"> Dichotomous key that can be used to discover the species of coreopsis.</a></p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
-          <p class="textblock"> Central Canada/US, incuding eastern Britsh Columbia. </p>        </div>
+          <p class="textblock"> Central Canada/US, including eastern Britsh Columbia. </p>        </div>
 <!-- End of orgins -->
 <br>
 <!-- STORIES 💌 -->
@@ -138,12 +136,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Coreopsis tinctoria or Plains coreopsis/ tickseed( annual) and Coreopsis lanceolata, Lanceleaf coreopsis (perennial) </h1>
+          <h1> Plains coreopsis/tickseed&nbsp; <i>Coreopsis tinctoria</i> (annual) &nbsp;and&nbsp; Lanceleaf coreopsis &nbsp;<i>Coreopsis lanceolata</i> (perennial) </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
