--- a/Dandelion.html
+++ b/Dandelion.html
@@ -38,7 +38,7 @@
 
 <h2> Care & Maintenance </h2>
 
-<p class="textblock"> Let it be. They will grow. </p>
+<p class="textblock"> If you leave them, they will grow. </p>
 
 
         </div>
@@ -56,7 +56,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Harvest flower stalks after seed dispersal. </p>        </div>
+          <p class="textblock"> Harvest flower stalks after seed dispersal. Leaves can be taken when they're lush and green. </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -69,7 +69,7 @@
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Pollinator friendly, weaver friendly. The stalks of dandelion can be used as a fibre.</p>        </div>
+          <p class="textblock"> Pollinator friendly, weaver friendly. The stalks of dandelion can be used as a fibre. Leaves can be eaten raw or cooked. Flowers can be used to make dandelion honey. </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -81,16 +81,16 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://bsbi.org/identification/taraxacum" style="text-decoration: underline;"> Hyperlink to more information on how to identify different species of dandilions. </a> </p>        </div>
+          <p class="textblock"> <a href="https://bsbi.org/identification/taraxacum" style="text-decoration: underline;"> How to identify different species of dandilions. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> Europe. </p>        </div>
 <!-- End of orgins -->
@@ -112,12 +112,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Dandelion (Taraxacum)</h1>
+          <h1> Dandelion &nbsp; <i>Taraxacum</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
