--- a/Day lily.html
+++ b/Day lily.html
@@ -36,10 +36,10 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maitenance </h2>
 
 <p class="textblock">
-Daily’s are low maintenance and drought tolerant.
+Daylilies are low maintenance and drought tolerant. So no need to water too often.
 
         </div>
 
@@ -57,13 +57,13 @@ Daily’s are low maintenance and drought tolerant.
           <h2> Harvest </h2>
 
           <p class="textblock">
-Summer-months:
+Summer months:
 <br>
-Snap-off old blooms to promote new flowers.
+Snap off old blooms to promote new flowers.
 <br><br>
 August, September, October:
 <br>
-As leaves golden gather for fibre.
+As leaves golden, gather them for fibre.
  </p>        </div>
 
 <!-- End of harvest info  -->
@@ -79,9 +79,9 @@ As leaves golden gather for fibre.
 
           <p class="textblock">
 
-old bloomed flowers produce a mellow purple dye.
+Blooms past their prime can be used to produce a mellow purple dye.
 <br><br>
-Dried leaves from at the end of the season are excillent for weaving or to make cordage.
+Dried leaves from at the end of the season are excellent for weaving or to make cordage.
  </p>        </div>
 <!-- End of uses info -->
 <br>
@@ -99,11 +99,11 @@ Dried leaves from at the end of the season are excillent for weaving or to make 
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> East Asia </p>        </div>
 <!-- End of orgins -->
@@ -125,12 +125,12 @@ Dried leaves from at the end of the season are excillent for weaving or to make 
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Daylily (Hemerocallis fulva) </h1>
+          <h1> Daylily &nbsp; <i>Hemerocallis fulva</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
