--- a/Day lily.html
+++ b/Day lily.html
@@ -36,11 +36,10 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitenance </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-Daylilies are low maintenance and drought tolerant. So no need to water too often.
-
+Daylilies are low maintenance and drought-tolerant. So no need to water too often.
         </div>
 
 <!-- End of care info -->
@@ -94,7 +93,7 @@ Dried leaves from at the end of the season are excellent for weaving or to make 
 
           <h2> D </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/hemerocallis/fulva/" style="text-decoration:underline"> Hyperlink to information on identifying orange daylily. </a> </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/hemerocallis/fulva/" style="text-decoration:underline"> Information on identifying an orange daylily. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
