--- a/Elderberry.html
+++ b/Elderberry.html
@@ -36,7 +36,7 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 Low maintenance.
@@ -45,7 +45,7 @@ Flexible,
 <br>
 Elderberry can be pollarded (for wood use.)
 <br>
-Autum and spring pruning as needed.
+Autumn and spring pruning as needed.
 
  </p>
 
@@ -85,9 +85,9 @@ and have medicinal properties
 <br>
 the seeds are toxic**
 <br><br>
-Autum:
+Autumn:
 <br>
-Pruning can be useed for dyes.
+Pruned leaves can be used for dyes.
  </p>        </div>
 
 <!-- End of harvest info  -->
@@ -101,8 +101,8 @@ Pruning can be useed for dyes.
 
           <h2> Uses </h2>
 
-          <p class="textblock"> Elderberry branches and whips can be used for greenwood carving,
-                                leaves and small branches for dyes and, berries for food and medicine.</p>        </div>
+          <p class="textblock"> Elderberry branches and whips can be used for green wood carving,
+                                leaves and small branches for dyes, and berries for food and medicine.</p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -114,16 +114,16 @@ Pruning can be useed for dyes.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://blogs.ubc.ca/coastal-plants/plants-of-bc/entry/38/" style="text-decoration: underline;"> Hyperlink to information on identifying elderberry in the pacific north west of North America.</a> </p>        </div>
+          <p class="textblock"> <a href="https://blogs.ubc.ca/coastal-plants/plants-of-bc/entry/38/" style="text-decoration: underline;"> Identifying elderberry in the Pacific Northwest of North America.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> North America </p>        </div>
 <!-- End of orgins -->
@@ -145,12 +145,12 @@ Pruning can be useed for dyes.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Elderberry (Sambucus)</h1>
+          <h1> Elderberry &nbsp; <i>Sambucus</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
