--- a/Empress tree.html
+++ b/Empress tree.html
@@ -36,17 +36,15 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 
 ~✿~ Low maintenance <br>
 <br>
-~✿~ ~✿~Fall and spring pruning. <br>
+~✿~ ~✿~Autumn and spring pruning. <br>
 <br>
-~✿~ ~✿~ ~✿~Palomino branches are fradgle <br>
--no climbing <br>
--ever.
+~✿~ ~✿~ ~✿~ Paulownia branches are fragile. <span><i>No climbing - ever!</i><span>
  </p>
 
 
@@ -65,7 +63,7 @@
 
           <h2> Harvest </h2>
 
-          <p class="textblock"> Early spring harvest whats needed.  </p>        </div>
+          <p class="textblock"> Early spring. Harvest only what's needed.  </p>        </div>
 
 <!-- End of harvest info  -->
 <br>
@@ -79,10 +77,10 @@
           <h2> Uses </h2>
 
           <p class="textblock"> ⚘⚘ Fast growing conifer tree. ⚘⚘ <br>
-                                Used for woodworking projects inlcuding: <br>
+                                Used for woodworking projects including: <br>
                                 ⚘ furniture, <br>
-                              ⚘  musical instiments <br>
-                                ⚘ small woodworking projects. </p>        </div>
+                              ⚘  musical instruments <br>
+                                ⚘ small woodworking projects </p>        </div>
 <!-- End of uses info -->
 <br>
 <!-- IDENTIFICATION DESCRIPTION 💌 -->
@@ -94,16 +92,16 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/paulownia/tomentosa/" style="text-decoration:underline;"> Hyperlink to information on identifying a paulownia tree. </a> </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/paulownia/tomentosa/" style="text-decoration:underline;"> How to identify a paulownia tree. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> China. </p>        </div>
 <!-- End of orgins -->
@@ -125,12 +123,12 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Paulownia tree, empress tree, foxglove, princess tree (Paulownia tomentosa) </h1>
+          <h1> Paulownia tree aka empress tree, foxglove tree or princess tree &nbsp; <i>Paulownia tomentosa</i>) </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
