--- a/Empress tree.html
+++ b/Empress tree.html
@@ -123,7 +123,7 @@
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Paulownia tree aka empress tree, foxglove tree or princess tree &nbsp; <i>Paulownia tomentosa</i>) </h1>
+          <h1> Paulownia tree aka empress tree, foxglove tree or princess tree &nbsp; <i>Paulownia tomentosa</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
