--- a/Finder.html
+++ b/Finder.html
@@ -46,7 +46,7 @@
 <br>
 <a href="fireweed.html">  Fireweed  </a>
 <br>
-<a href="indigo.html">  Japanese Indigo , Persicaria tinctoria, Dyers Knotweed  </a>
+<a href="indigo.html">  Japanese Indigo, Persicaria tinctoria, Dyer's Knotweed  </a>
 <br>
 <a href="madder root.html">  Madder Root  </a>
 <br>
@@ -92,7 +92,7 @@
 <br>
 <a href="nettle.html">  Nettle  </a>
 <br>
-<a href="Phorium tanax.html">  Phorium Tanax  </a>
+<a href="Phorium tanax.html">  Phormium Tanax  </a>
 <br>
 <a href="Plantain.html">  Plantain  </a>
 <br>
@@ -125,15 +125,15 @@
 <br>
 <a href="elderberry.html">  Elderberry  </a>
 <br>
-<a href="green willow.html">  Green willow  </a>
+<a href="green willow.html">  Green Willow  </a>
 <br>
 <a href="Hazel.html">  Hazel  </a>
 <br>
-<a href="Ocean Spray (Iron Wood).html">  Ocrean Spray (Iron Wood)  </a>
+<a href="Ocean Spray (Iron Wood).html">  Ocean Spray (Ironwood)  </a>
 <br>
 <a href="Spruce.html">  Spruce Tree  </a>
 <br>
-<a href="white ash.html">  White Ash tree  </a>
+<a href="white ash.html">  White Ash Tree  </a>
 
 
 
@@ -201,8 +201,8 @@
 
   </div>
 
-  <button class="gohome" style="top: 500px"> <a href="map.html">~Back to Map~</a></button>
-  <blockquote class="letsgo"> A finder for all the plants in the digtal garden. Click the text to be sent to a plant's inspect page.</blockquote>
+  <button class="gohome" style="top: 500px"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
+  <blockquote class="letsgo"> A finder for all plants in the digtal garden. Click the text to be sent to a plant's page.</blockquote>
 
 
 </body>
