--- a/Fireweed.html
+++ b/Fireweed.html
@@ -36,19 +36,18 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
 In spring:
 <br>
 Add wood ash to soil,
 <br>
-And bark mulch for water retention.
+And bark mulch to aid with water retention.
 <br><br>
 Low maintenance the rest of the season.
 <br><br>
-
-Unwind bind weed that will climb
+Unwind bound weed that will climb
 <br>
 __up
 <br>
@@ -72,13 +71,13 @@ _____the stalks.  </p>
 
           <p class="textblock">
 June: <br>
-leaves~~for tea.
+leaves~~for tea
 <br><br>
-Summer-time:<br>
-flowers~~for dyes.
+Summertime:<br>
+flowers~~for dyes
 <br><br>
 Autum:<br>
-Seed fluff~~for fibres.
+Seed fluff~~for fibres
 </p>        </div>
 
 <!-- End of harvest info  -->
@@ -95,11 +94,11 @@ Seed fluff~~for fibres.
           <p class="textblock">
   ~✿~ Fibre from stalk for cordage and weaving<br><br>
 
-  ~✿~ Seed fluff  can be spun in with other fibres for added loft and texture.<br><br>
+  ~✿~ Seed fluff can be spun in with other fibres for added loft and texture.<br><br>
 
   ~✿~ Flowers and leaves for tea<br><br>
 
-  ~✿~ Flowers for dye.<br><br>
+  ~✿~ Flowers for dye <br><br>
 
  </p>        </div>
 <!-- End of uses info -->
@@ -113,16 +112,16 @@ Seed fluff~~for fibres.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Epilobium%20angustifolium" style="text-decoration: underline;"> Hyperlink to information on identifying fireweed.</a> </p>        </div>
+          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Epilobium%20angustifolium" style="text-decoration: underline;"> How to identify fireweed.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> North America </p>        </div>
 <!-- End of orgins -->
@@ -144,12 +143,12 @@ Seed fluff~~for fibres.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Fireweed (Chamaenerion angustifolium)</h1>
+          <h1> Fireweed &nbsp; <i>Chamaenerion angustifolium</i></h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
