--- a/Apple tree.html
+++ b/Apple tree.html
@@ -121,7 +121,7 @@ Both apple wood and apple dye react very well with iron as a colour depressant.
 
                   <p class="textblock">
 
-<a href="http://www.canadiantreetours.org/species-pages/Common_apple.html" style="text-decoration: underline;"> Identifiers of branches, buds, bark and twigs. </a>
+<a href="http://www.canadiantreetours.org/species-pages/Common_apple.html" style="text-decoration: underline;"> How to identify apple tree branches, buds, bark and twigs. </a>
 
 
                    </p>        </div>
