--- a/Comfrey.html
+++ b/Comfrey.html
@@ -111,7 +111,7 @@ serve to the garden. </i></p>        </div>
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://ucjeps.berkeley.edu/eflora/eflora_display.php?tid=45945" style="text-decoration: underline;"> Botanical identifiers for comfrey. </a>   </p>   </div>
+          <p class="textblock"> <a href="https://ucjeps.berkeley.edu/eflora/eflora_display.php?tid=45945" style="text-decoration: underline;"> How to identify comfrey. </a>   </p>   </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
