--- a/Coreopsis.html
+++ b/Coreopsis.html
@@ -105,7 +105,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/coreopsis/" style="text-decoration:underline;"> Dichotomous key that can be used to discover the species of coreopsis.</a></p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/dkey/coreopsis/" style="text-decoration:underline;"> Dichotomous key of the species of coreopsis.</a></p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
