--- a/Dandelion.html
+++ b/Dandelion.html
@@ -81,7 +81,7 @@
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://bsbi.org/identification/taraxacum" style="text-decoration: underline;"> How to identify different species of dandilions. </a> </p>        </div>
+          <p class="textblock"> <a href="https://bsbi.org/identification/taraxacum" style="text-decoration: underline;"> How to identify different species of dandelions. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
