--- a/Day lily.html
+++ b/Day lily.html
@@ -93,7 +93,7 @@ Dried leaves from at the end of the season are excellent for weaving or to make 
 
           <h2> D </h2>
 
-          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/hemerocallis/fulva/" style="text-decoration:underline"> Information on identifying an orange daylily. </a> </p>        </div>
+          <p class="textblock"> <a href="https://gobotany.nativeplanttrust.org/species/hemerocallis/fulva/" style="text-decoration:underline"> How to identify an orange daylily. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
