--- a/Elderberry.html
+++ b/Elderberry.html
@@ -114,7 +114,7 @@ Pruned leaves can be used for dyes.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://blogs.ubc.ca/coastal-plants/plants-of-bc/entry/38/" style="text-decoration: underline;"> Identifying elderberry in the Pacific Northwest of North America.</a> </p>        </div>
+          <p class="textblock"> <a href="https://blogs.ubc.ca/coastal-plants/plants-of-bc/entry/38/" style="text-decoration: underline;"> How to identify elderberry in the Pacific Northwest of North America.</a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
