--- a/Golden hops.html
+++ b/Golden hops.html
@@ -36,12 +36,12 @@
 
 <img src="images/care.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-<h2> Care & Maitnence </h2>
+<h2> Care & Maintenance </h2>
 
 <p class="textblock">
-March, april, early spring:
+March, April — early spring:
 <br>
-Golden hops requires a strong trellis.
+Golden hops require a strong trellis.
 <br>
 Build and repair as needed.
  </p>
@@ -64,8 +64,8 @@ Build and repair as needed.
 
           <p class="textblock">
 
-August, September, October:
-long strands from pruning used in basketry.
+August, September, October:<br>
+Long strands from pruning can be used in basketry.
 </p>        </div>
 
 <!-- End of harvest info  -->
@@ -100,16 +100,16 @@ long strands from pruning used in basketry.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Humulus%20lupulus" style="text-decoration: underline;"> Hyperlink to information on identifying golden hops. </a> </p>        </div>
+          <p class="textblock"> <a href="http://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Humulus%20lupulus" style="text-decoration: underline;"> How to identify golden hops. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
 
-        <button class="icons" onclick="showhide('orginsinfo')"><p> Orgins<p> </button>
+        <button class="icons" onclick="showhide('orginsinfo')"><p> Origins<p> </button>
         <div id="orginsinfo" class="infoblock" style="display:none">
           <img src="images/orgins.png" style="width: 100px; height: 100px; border:1px solid black; float: right">
 
-          <h2> Orgins </h2>
+          <h2> Origins </h2>
 
           <p class="textblock"> North America </p>        </div>
 <!-- End of orgins -->
@@ -131,12 +131,12 @@ long strands from pruning used in basketry.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Golden hops (Humulus lupulus) </h1>
+          <h1> Golden hops &nbsp; <i>Humulus lupulus 'Aureus'</i> </h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
-          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> ~Keep Walking~</a></button>
-          <button class="gohome"> <a href="map.html">~Back to Map~</a></button>
+          <button class="letsgo"> <a href="javascript:letsgo()" id="letsgogo"> <sub>~</sub>Keep Walking<sub>~</sub></a></button>
+          <button class="gohome"> <a href="map.html"><sub>~</sub>Back to Map<sub>~</sub></a></button>
 
     </div>
 
