--- a/Pokeberry.html
+++ b/Pokeberry.html
@@ -119,7 +119,7 @@ caution.
       <div class= "column_layout" class="infoblock">
 
 <!-- PLANT NAME AND LATIN -->
-          <h1> Pokeberry (Phytolacca americana)</h1>
+          <h1> Poke weed (Phytolacca americana)</h1>
       </div>
 
 <!-- EXIT PAGE BUTTONS -->
