--- a/Blood root.html
+++ b/Blood root.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/blood-root2.jpg);">
+<body ID="frame_test" style="background-image:url(images/Blood-root2.jpg);">
   <div ID="info">
       <div class="righthandline">
 
