javascript clean up ✨

--- a/Poke weed.html
+++ b/Poke weed.html
@@ -25,7 +25,7 @@
 
   <!-- ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ ✿ -->
 
-<body ID="frame_test" style="background-image:url(images/Pokeberry2.jpg); height: 1700px">
+<body ID="frame_test" style="background-image:url(images/Poke weed2.jpg); height: 1700px">
   <div ID="info">
       <div class="righthandline">
 
@@ -88,7 +88,7 @@ caution.
 
           <h2> Plant Identification </h2>
 
-          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Phytolacca%20americana" style="text-decoration:underline;"> Hyperlink to information on identifying pokeberry. </a> </p>        </div>
+          <p class="textblock"> <a href="https://linnet.geog.ubc.ca/Atlas/Atlas.aspx?sciname=Phytolacca%20americana" style="text-decoration:underline;"> Hyperlink to information on identifying poke weed. </a> </p>        </div>
 <!-- End of Plant identification -->
 <br>
 <!-- ORGINS 💌 -->
@@ -111,7 +111,7 @@ caution.
 
           <h2> Stories </h2>
 
-          <p class="textblock"> Share your stories about pokeberry with earthandmapping(at)gmail.com </p>        </div>
+          <p class="textblock"> Share your stories about poke weed with earthandmapping(at)gmail.com </p>        </div>
       </div>
 <!-- End of stories -->
 
